=Used valid category

--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ author= Simon D. Levy<simon.d.levy@gmail.com>
 maintainer=Simon D. Levy<simon.d.levy@gmail.com>
 sentence=Libraries for MaxBotix MB1242 sonar on Arduino and WiringPi Edit
 paragraph=Uses I^C
-category=Arduino
+category=Sensors
 url=https://github.com/simondlevy/MB1242
 architectures=*
 includes=MB1242.h
