Works with common main.cpp in CrossPlatformDataBus

--- a/extras/wiringpi/Makefile
+++ b/extras/wiringpi/Makefile
@@ -29,7 +29,8 @@ MBSRC = ../../src
 
 CPSRC  = $(CPDB)/src
 CPEXT  = $(CPDB)/extras
-I2CSRC = $(CPDB)/extras/i2c/wiringpi/src
+CPCMN  = $(CPEXT)/common
+I2CSRC = $(CPEXT)/i2c/wiringpi/src
 
 all: $(ALL)
 
@@ -45,8 +46,8 @@ MB1242.o: $(MBSRC)/MB1242.cpp  $(MBSRC)/MB1242.h
 WiringPiI2C.o: $(I2CSRC)/WiringPiI2C.cpp 
 	g++ -std=c++11 -Wall -I$(CPSRC) -c $(I2CSRC)/WiringPiI2C.cpp
 
-main.o: $(CPEXT)/main.cpp 
-	g++ -std=c++11 -Wall -c $(CPEXT)/main.cpp
+main.o: $(CPCMN)/main.cpp 
+	g++ -std=c++11 -Wall -c $(CPCMN)/main.cpp
 
 edit:
 	vim ShowDistance.cpp
